crates/busx/src/tui/snapshots/busx__tui__e2e_tests__e2e_listen_property_armed_then_esc.snap
---
source: crates/busx/src/tui/e2e_tests.rs
expression: out
---
"org.busx.Test > /org/busx/Test > org.busx.Test                                  "
"┌methods─────────────────────────────────────────────────┐┌▶ actions───────────┐"
"│TakeHints          a{sv}                                ││Get                 │"
"│Join               as                                   ││Set                 │"
"│BumpVolume                                              ││Listen              │"
"│MakeFd                                                  ││                    │"
"└────────────────────────────────────────────────────────┘│                    │"
"┌properties──────────────────────────────────────────────┐│                    │"
"│counts  a{uu}  {1: 10, 2: 20}                           ││                    │"
"│hints   a{sv}  {"urgency": <y 1>}                       ││                    │"
"│name    s      "busx-test"                              ││                    │"
"│volume  d      0.5                                      ││                    │"
"└────────────────────────────────────────────────────────┘│                    │"
"┌signals─────────────────────────────────────────────────┐│                    │"
"│                                                        ││                    │"
"│                                                        ││                    │"
"│                                                        ││                    │"
"│                                                        ││                    │"
"└────────────────────────────────────────────────────────┘└────────────────────┘"
"Tab column · ↑↓ select · Enter open · r refresh · Esc back · q quit · ? help    "
