crates/busx/src/tui/snapshots/busx__tui__e2e_tests__e2e_mouse_click_drills_into_service.snap
---
source: crates/busx/src/tui/e2e_tests.rs
expression: out
---
"org.busx.ScrollA                                                                "
"┌Objects───────────────────────────────────────────────────────────────────────┐"
"│/                                                                             │"
"│/org                                                                          │"
"│/org/busx                                                                     │"
"│/org/busx/Test                                                                │"
"│/org/busx/Test/sub                                                            │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"↑↓ select · Enter open · / filter · Esc back · q quit · ? help                  "
