crates/busx/src/tui/snapshots/busx__tui__e2e_tests__e2e_mouse_click_method_and_call_button.snap
---
source: crates/busx/src/tui/e2e_tests.rs
expression: out
---
"org.busx.Test > /org/busx/Test > org.busx.Test > call TakeHints                 "
"┌call org.busx.Test.TakeHints──────────────────────────────────────────────────┐"
"│▶ hints  a{sv}  ▏                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                   [Trigger]                                  │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"Tab move · Enter trigger · c copy-as · Esc back · q quit · ? help               "
