crates/busx/src/tui/snapshots/busx__tui__e2e_tests__e2e_mouse_scroll_on_service_list.snap
---
source: crates/busx/src/tui/e2e_tests.rs
expression: out
---
"                                                                "
"┌Services──────────────────────────────────────────────────────┐"
"│org.busx.ScrollC                        <PID>  <PROC>         │"
"│org.busx.ScrollD                        <PID>  <PROC>         │"
"│org.busx.ScrollE                        <PID>  <PROC>         │"
"│org.busx.ScrollF                        <PID>  <PROC>         │"
"└──────────────────────────────────────────────────────────────┘"
"↑↓ select · Enter open · / filter · q quit · ? help             "
