crates/busx/src/tui/snapshots/busx__tui__e2e_tests__e2e_service_list_scrolls_then_climbs.snap
---
source: crates/busx/src/tui/e2e_tests.rs
expression: out
---
"                                                                "
"┌Services──────────────────────────────────────────────────────┐"
"│org.busx.ScrollH                        <PID>  <PROC>         │"
"│org.busx.ScrollI                        <PID>  <PROC>         │"
"│org.busx.ScrollJ                        <PID>  <PROC>         │"
"│org.busx.ScrollK                        <PID>  <PROC>         │"
"└──────────────────────────────────────────────────────────────┘"
"↑↓ select · Enter open · / filter · q quit · ? help             "
