crates/busx/src/tui/snapshots/busx__tui__e2e_tests__e2e_set_property.snap
---
source: crates/busx/src/tui/e2e_tests.rs
expression: out
---
"org.busx.Test > /org/busx/Test > org.busx.Test > set volume > Result            "
"┌org.busx.Test.volume──────────────────────────────────────────────────────────┐"
"│ok                                                                            │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"↑↓ scroll · c copy-as · y copy · Esc back · q quit · ? help                     "
