crates/busx/src/tui/snapshots/busx__tui__e2e_tests__e2e_starts_and_lists_test_service.snap
---
source: crates/busx/src/tui/e2e_tests.rs
expression: out
---
"                                                                "
"┌Services──────────────────────────────────────────────────────┐"
"│org.busx.Scroll00                      <PID>  busx-1e64b0be43│"
"│org.busx.Scroll01                      <PID>  busx-1e64b0be43│"
"│org.busx.Scroll02                      <PID>  busx-1e64b0be43│"
"│org.busx.Scroll03                      <PID>  busx-1e64b0be43│"
"│org.busx.Scroll04                      <PID>  busx-1e64b0be43│"
"│org.busx.Scroll05                      <PID>  busx-1e64b0be43│"
"│org.busx.Scroll06                      <PID>  busx-1e64b0be43│"
"│org.busx.Scroll07                      <PID>  busx-1e64b0be43│"
"└──────────────────────────────────────────────────────────────┘"
"↑↓ select · Enter open · / filter · q quit · ? help             "
